--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,7 +29,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         
         script: |
-          cd /apis/nodejsapis
+          cd apis/nodejsapis
           git pull origin main
           npm install
           pm2 restart app.js
